// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Symbol.svelte > should render default circle. 1`] = `
<body>
  <div>
    <path
      d="M2 10A8 8 0 0 0 18 10A8 8 0 0 0 2 10"
      fill="currentColor"
      fill-rule="evenodd"
      role="button"
      stroke="currentColor"
      stroke-width="0.5"
      tabindex="0"
      transform="translate(-10,-10)"
    />
    
  </div>
</body>
`;

exports[`Symbol.svelte > should render symbol provided 1`] = `
<body>
  <div>
    <polygon
      fill="currentColor"
      points="0, -10, 8.660254037844386, 5, -8.660254037844386, 5"
      role="button"
      stroke="currentColor"
      tabindex="0"
    />
    
  </div>
</body>
`;

exports[`Symbol.svelte > should render using path when component is not provided 1`] = `
<body>
  <div>
    <path
      d="M10 1.732L0 18.468L20 18.468Z"
      fill="currentColor"
      fill-rule="evenodd"
      role="button"
      stroke="currentColor"
      stroke-width="0.5"
      tabindex="0"
      transform="translate(-10,-10)"
    />
    
  </div>
</body>
`;
